--- a/template/Example.org
+++ b/template/Example.org
@@ -65,6 +65,7 @@ Org-Roam extends the environment with a networked knowledge base inspired by the
 
 * Installation 
 To set up the reproducible scientific writing environment, you first need to install the Nix package manager. The following sections describe the installation process.
+More information also can be found in the repository: https://github.com/lionelwisskirchen/ReScUE/tree/main
 
 ** System-wide Installation
 It can be installed as either a multi-user or single-user installation [cite:@DownloadNixNixOS].
@@ -115,17 +116,18 @@ Footnotes are easily added using ~C-c C-x f~ [fn:1], allowing for inline comment
 #+CAPTION: This is an example of an image created using the Org syntax.
 #+NAME: fig:example
 #+ATTR_LATEX: :placement [H] :width 250
-[[/home/lionel/development/osws/template/Example.org_20260106_104125_WlvGfK.png]]
+[[./Example.org_20260106_104125_WlvGfK.png]]
 
 Tables can also be added and maintained efficiently within Org-mode (See Table [[table]]).
 
 #+CAPTION: This is an example of a table created using the Org syntax.
 #+NAME: table
-| Project        | Category      | Status      | Tasks | Completed | Progress | Priority |
-|----------------+---------------+-------------+-------+-----------+----------+----------|
-| Literature Rev | Research      | In Review   |     8 |         6 |      75% | High     |
-| Data Analysis  | Computing     | Ongoing     |    12 |         5 |      42% | Medium   |
-| Writing Draft  | Manuscript    | Planned     |     5 |         0 |       0% | High     |
+| Project        | Category   | Status    | Tasks | Completed | Progress | Priority |
+|----------------+------------+-----------+-------+-----------+----------+----------|
+| Literature Rev | Research   | In Review |     8 |         6 |      75% | High     |
+| Data Analysis  | Computing  | Ongoing   |    12 |         5 |      42% | Medium   |
+| Writing Draft  | Manuscript | Planned   |     5 |         0 |       0% | High     |
+
 
 For more advanced visualizations that cannot be generated directly in Org-mode, LaTeX or TikZ code can be embedded directly in the document, as shown in Figure [[fig:all-optimisations]]. This approach allows the creation of complex charts and plots while preserving the full reproducibility of the writing environment.
 
